--- a/index.html
+++ b/index.html
@@ -5,88 +5,182 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Judah's Customs | Bringing your vision to life</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
-        body { background-color: #050505; color: white; font-family: 'Inter', sans-serif; }
-        .blue-glow { box-shadow: 0 0 20px rgba(24, 124, 244, 0.2); }
-        .glass { background: rgba(255, 255, 255, 0.03); backdrop-filter: blur(10px); border: 1px solid rgba(255, 255, 255, 0.05); }
-        .accent-text { color: #187cf4; }
-        .btn-primary { background-color: #187cf4; transition: 0.3s; }
-        .btn-primary:hover { background-color: #1466c9; transform: translateY(-2px); }
+        @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;800&display=swap');
+
+        :root {
+            --brand-blue: #187cf4;
+            --bg-dark: #030303;
+        }
+
+        body {
+            background-color: var(--bg-dark);
+            color: white;
+            font-family: 'Plus Jakarta Sans', sans-serif;
+            overflow-x: hidden;
+            cursor: none; /* Hide default cursor */
+        }
+
+        /* Textured Background & Glows */
+        .noise-bg {
+            position: fixed;
+            top: 0; left: 0; width: 100%; height: 100%;
+            background: url('https://grainy-gradients.vercel.app/noise.svg');
+            opacity: 0.05;
+            pointer-events: none;
+            z-index: 50;
+        }
+
+        .glow-sphere {
+            position: fixed;
+            width: 500px;
+            height: 500px;
+            background: radial-gradient(circle, rgba(24, 124, 244, 0.15) 0%, rgba(0,0,0,0) 70%);
+            border-radius: 50%;
+            filter: blur(60px);
+            z-index: -1;
+            animation: pulse 10s infinite alternate;
+        }
+
+        @keyframes pulse {
+            0% { transform: translate(-10%, -10%) scale(1); }
+            100% { transform: translate(20%, 20%) scale(1.2); }
+        }
+
+        /* Glassmorphism */
+        .glass-card {
+            background: rgba(255, 255, 255, 0.03);
+            backdrop-filter: blur(12px);
+            border: 1px solid rgba(255, 255, 255, 0.08);
+            box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.8);
+            transition: border 0.3s ease;
+        }
+
+        .glass-card:hover {
+            border-color: var(--brand-blue);
+        }
+
+        /* Custom Cursor */
+        #cursor {
+            width: 20px;
+            height: 20px;
+            background: var(--brand-blue);
+            border-radius: 50%;
+            position: fixed;
+            pointer-events: none;
+            z-index: 9999;
+            box-shadow: 0 0 20px var(--brand-blue), 0 0 40px var(--brand-blue);
+            mix-blend-mode: screen;
+            transition: transform 0.1s ease;
+        }
+
+        /* Animations */
+        .fade-in {
+            animation: fadeInUp 1s ease forwards;
+            opacity: 0;
+        }
+
+        @keyframes fadeInUp {
+            from { opacity: 0; transform: translateY(30px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        .neon-text {
+            text-shadow: 0 0 10px rgba(24, 124, 244, 0.5);
+        }
     </style>
 </head>
 <body>
 
-    <nav class="flex justify-between items-center px-8 py-6 max-w-7xl mx-auto">
-        <div class="text-2xl font-bold tracking-tighter">JUDAH'S <span class="accent-text">CUSTOMS</span></div>
-        <div class="hidden md:flex space-x-8 text-sm font-medium text-gray-400">
+    <div id="cursor"></div>
+    <div class="noise-bg"></div>
+    <div class="glow-sphere" style="top: -10%; left: -10%;"></div>
+    <div class="glow-sphere" style="bottom: -10%; right: -10%; background: radial-gradient(circle, rgba(24, 124, 244, 0.1) 0%, rgba(0,0,0,0) 70%);"></div>
+
+    <nav class="flex justify-between items-center px-10 py-8 max-w-7xl mx-auto relative z-10 fade-in">
+        <div class="text-xl font-extrabold tracking-tighter">JUDAH<span class="text-[#187cf4]">.</span></div>
+        <div class="hidden md:flex space-x-10 text-[11px] uppercase tracking-[0.2em] font-bold text-gray-400">
             <a href="#" class="hover:text-white transition">Home</a>
-            <a href="#features" class="hover:text-white transition">Services</a>
+            <a href="#work" class="hover:text-white transition">Work</a>
             <a href="https://discord.gg/judah" class="hover:text-white transition">Discord</a>
         </div>
-        <a href="mailto:contact@jcustoms.org" class="glass px-5 py-2 rounded-full text-sm border border-white/10 hover:bg-white/5 transition">Contact</a>
+        <a href="mailto:contact@jcustoms.org" class="glass-card px-6 py-2 rounded-full text-xs font-bold uppercase tracking-widest hover:bg-[#187cf4] hover:text-white transition-all">Contact</a>
     </nav>
 
-    <section class="flex flex-col items-center justify-center text-center py-24 px-4">
-        <div class="inline-block px-4 py-1.5 mb-6 text-xs font-semibold tracking-widest uppercase bg-blue-500/10 text-[#187cf4] rounded-full border border-blue-500/20">
-            Now Accepting New Commissions
-        </div>
-        <h1 class="text-5xl md:text-7xl font-extrabold mb-6 tracking-tight">
-            Bringing your <span class="accent-text">vision</span> to life.
-        </h1>
-        <p class="text-gray-400 max-w-2xl text-lg mb-10">
-            High-quality custom development, assets, and unique digital solutions tailored specifically to your needs. If you can dream it, we can build it.
-        </p>
-        <div class="flex flex-col md:flex-row gap-4">
-            <a href="https://discord.gg/judah" class="btn-primary px-8 py-4 rounded-xl font-bold flex items-center justify-center gap-2">
-                <i class="fab fa-discord"></i> Join Discord
-            </a>
-            <a href="#features" class="glass px-8 py-4 rounded-xl font-bold hover:bg-white/5 transition">
-                View Services
-            </a>
-        </div>
-    </section>
-
-    <section id="features" class="max-w-7xl mx-auto px-8 py-20">
-        <div class="grid md:grid-cols-3 gap-6">
-            <div class="glass p-8 rounded-2xl hover:border-blue-500/50 transition-all duration-500">
-                <div class="w-12 h-12 bg-blue-500/20 rounded-lg flex items-center justify-center mb-6">
-                    <i class="fas fa-code accent-text text-xl"></i>
-                </div>
-                <h3 class="text-xl font-bold mb-3">Custom Dev</h3>
-                <p class="text-gray-400 leading-relaxed">Tailor-made scripts and applications optimized for performance and scalability.</p>
-            </div>
-            <div class="glass p-8 rounded-2xl hover:border-blue-500/50 transition-all duration-500">
-                <div class="w-12 h-12 bg-blue-500/20 rounded-lg flex items-center justify-center mb-6">
-                    <i class="fas fa-paint-brush accent-text text-xl"></i>
-                </div>
-                <h3 class="text-xl font-bold mb-3">Unique Design</h3>
-                <p class="text-gray-400 leading-relaxed">Clean, modern aesthetics that ensure your brand stands out from the competition.</p>
-            </div>
-            <div class="glass p-8 rounded-2xl hover:border-blue-500/50 transition-all duration-500">
-                <div class="w-12 h-12 bg-blue-500/20 rounded-lg flex items-center justify-center mb-6">
-                    <i class="fas fa-bolt accent-text text-xl"></i>
-                </div>
-                <h3 class="text-xl font-bold mb-3">Fast Delivery</h3>
-                <p class="text-gray-400 leading-relaxed">Rapid turnaround times without compromising on the quality of the final product.</p>
+    <section class="relative z-10 flex flex-col items-center justify-center text-center pt-32 pb-20 px-4">
+        <div class="fade-in" style="animation-delay: 0.2s">
+            <h2 class="text-[#187cf4] text-xs font-bold tracking-[0.4em] uppercase mb-4 neon-text">Judah's Customs</h2>
+            <h1 class="text-6xl md:text-8xl font-extrabold mb-8 tracking-tighter leading-tight">
+                Bringing your <br> <span class="text-transparent bg-clip-text bg-gradient-to-r from-blue-400 to-blue-600">vision</span> to life.
+            </h1>
+            <p class="text-gray-400 max-w-xl mx-auto text-lg mb-12 font-light">
+                Premium digital assets and custom development with a focus on high-performance aesthetics.
+            </p>
+            <div class="flex flex-wrap justify-center gap-6">
+                <a href="https://discord.gg/judah" class="bg-[#187cf4] shadow-[0_0_30px_rgba(24,124,244,0.4)] px-10 py-4 rounded-full font-bold text-sm uppercase tracking-widest hover:scale-105 transition-transform">
+                    Join Discord
+                </a>
+                <a href="#work" class="glass-card px-10 py-4 rounded-full font-bold text-sm uppercase tracking-widest hover:bg-white/5">
+                    View Project
+                </a>
             </div>
         </div>
     </section>
 
-    <section class="max-w-5xl mx-auto px-8 py-20">
-        <div class="glass rounded-3xl p-12 text-center relative overflow-hidden">
-            <div class="absolute top-0 left-0 w-full h-1 bg-[#187cf4]"></div>
-            <h2 class="text-3xl font-bold mb-4">Ready to elevate your project?</h2>
-            <p class="text-gray-400 mb-8">Join over 1,500 members in our community and get a quote today.</p>
-            <div class="flex justify-center gap-6">
-                <a href="mailto:contact@jcustoms.org" class="text-gray-300 hover:text-[#187cf4] transition">contact@jcustoms.org</a>
-            </div>
+    <section id="work" class="max-w-7xl mx-auto px-10 py-32 grid md:grid-cols-3 gap-8 relative z-10">
+        <div class="glass-card p-10 rounded-[32px] fade-in" data-tilt data-tilt-max="10" data-tilt-speed="400" data-tilt-glare data-tilt-max-glare="0.1" style="animation-delay: 0.4s">
+            <div class="mb-8 text-[#187cf4] text-3xl"><i class="fas fa-layer-group"></i></div>
+            <h3 class="text-2xl font-bold mb-4">UI/UX Design</h3>
+            <p class="text-gray-500 text-sm leading-relaxed">Modern interfaces designed to convert and impress. Every pixel serves a purpose.</p>
+        </div>
+
+        <div class="glass-card p-10 rounded-[32px] fade-in" data-tilt data-tilt-max="10" data-tilt-speed="400" data-tilt-glare data-tilt-max-glare="0.1" style="animation-delay: 0.6s">
+            <div class="mb-8 text-[#187cf4] text-3xl"><i class="fas fa-code"></i></div>
+            <h3 class="text-2xl font-bold mb-4">Custom Dev</h3>
+            <p class="text-gray-500 text-sm leading-relaxed">Clean, efficient codebases built for speed and long-term reliability.</p>
+        </div>
+
+        <div class="glass-card p-10 rounded-[32px] fade-in" data-tilt data-tilt-max="10" data-tilt-speed="400" data-tilt-glare data-tilt-max-glare="0.1" style="animation-delay: 0.8s">
+            <div class="mb-8 text-[#187cf4] text-3xl"><i class="fas fa-microchip"></i></div>
+            <h3 class="text-2xl font-bold mb-4">Asset Creation</h3>
+            <p class="text-gray-500 text-sm leading-relaxed">Unique 3D and 2D assets tailored to your specific community or brand.</p>
         </div>
     </section>
 
-    <footer class="py-10 text-center text-gray-500 text-sm border-t border-white/5">
-        <p>&copy; 2026 Judah's Customs. All rights reserved.</p>
+    <footer class="text-center py-20 relative z-10 border-t border-white/5">
+        <p class="text-gray-600 text-[10px] uppercase tracking-[0.5em]">&copy; 2026 Judah's Customs | contact@jcustoms.org</p>
     </footer>
 
+    <script>
+        // Custom Cursor Logic
+        const cursor = document.getElementById('cursor');
+        document.addEventListener('mousemove', (e) => {
+            cursor.style.left = e.clientX + 'px';
+            cursor.style.top = e.clientY + 'px';
+        });
+
+        // Hover Effect for Cursor
+        const links = document.querySelectorAll('a, .glass-card');
+        links.forEach(link => {
+            link.addEventListener('mouseenter', () => {
+                cursor.style.transform = 'scale(3)';
+                cursor.style.background = 'white';
+            });
+            link.addEventListener('mouseleave', () => {
+                cursor.style.transform = 'scale(1)';
+                cursor.style.background = '#187cf4';
+            });
+        });
+
+        // Init Tilt
+        VanillaTilt.init(document.querySelectorAll(".glass-card"), {
+            max: 15,
+            speed: 400,
+            glare: true,
+            "max-glare": 0.2,
+        });
+    </script>
 </body>
 </html>
