--- a/index.html
+++ b/index.html
@@ -3,93 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Judah's Customs | Bringing your vision to life</title>
+    <title>Judah's Customs | Vision to Life</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;800&display=swap');
 
-        :root {
-            --brand-blue: #187cf4;
-            --bg-dark: #030303;
-        }
-
-        body {
-            background-color: var(--bg-dark);
-            color: white;
-            font-family: 'Plus Jakarta Sans', sans-serif;
-            overflow-x: hidden;
-            cursor: none; /* Hide default cursor */
-        }
+        :root { --brand-blue: #187cf4; --bg-dark: #030303; }
+        body { background-color: var(--bg-dark); color: white; font-family: 'Plus Jakarta Sans', sans-serif; overflow-x: hidden; cursor: none; scroll-behavior: smooth; }
 
         /* Textured Background & Glows */
-        .noise-bg {
-            position: fixed;
-            top: 0; left: 0; width: 100%; height: 100%;
-            background: url('https://grainy-gradients.vercel.app/noise.svg');
-            opacity: 0.05;
-            pointer-events: none;
-            z-index: 50;
-        }
+        .noise-bg { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: url('https://grainy-gradients.vercel.app/noise.svg'); opacity: 0.05; pointer-events: none; z-index: 50; }
+        .glow-sphere { position: fixed; width: 600px; height: 600px; background: radial-gradient(circle, rgba(24, 124, 244, 0.15) 0%, rgba(0,0,0,0) 70%); border-radius: 50%; filter: blur(80px); z-index: -1; animation: pulse 12s infinite alternate; }
+        @keyframes pulse { 0% { transform: translate(-10%, -10%) scale(1); } 100% { transform: translate(20%, 20%) scale(1.1); } }
 
-        .glow-sphere {
-            position: fixed;
-            width: 500px;
-            height: 500px;
-            background: radial-gradient(circle, rgba(24, 124, 244, 0.15) 0%, rgba(0,0,0,0) 70%);
-            border-radius: 50%;
-            filter: blur(60px);
-            z-index: -1;
-            animation: pulse 10s infinite alternate;
-        }
+        /* UI Elements */
+        .glass-card { background: rgba(255, 255, 255, 0.02); backdrop-filter: blur(15px); border: 1px solid rgba(255, 255, 255, 0.08); transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
+        .glass-card:hover { border-color: var(--brand-blue); box-shadow: 0 0 30px rgba(24, 124, 244, 0.2); transform: translateY(-5px); }
+        
+        #cursor { width: 20px; height: 20px; background: var(--brand-blue); border-radius: 50%; position: fixed; pointer-events: none; z-index: 9999; box-shadow: 0 0 20px var(--brand-blue); transition: transform 0.15s ease, background 0.3s ease; }
 
-        @keyframes pulse {
-            0% { transform: translate(-10%, -10%) scale(1); }
-            100% { transform: translate(20%, 20%) scale(1.2); }
-        }
+        .hidden-page { display: none; opacity: 0; transform: translateY(20px); }
+        .active-page { display: block; animation: pageIn 0.6s forwards; }
+        @keyframes pageIn { to { opacity: 1; transform: translateY(0); } }
 
-        /* Glassmorphism */
-        .glass-card {
-            background: rgba(255, 255, 255, 0.03);
-            backdrop-filter: blur(12px);
-            border: 1px solid rgba(255, 255, 255, 0.08);
-            box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.8);
-            transition: border 0.3s ease;
-        }
+        /* Portfolio Image Styles */
+        .work-img { width: 100%; border-radius: 15px; cursor: pointer; transition: 0.4s; border: 1px solid rgba(255,255,255,0.1); }
+        .work-img:hover { filter: drop-shadow(0 0 15px var(--brand-blue)); }
 
-        .glass-card:hover {
-            border-color: var(--brand-blue);
-        }
-
-        /* Custom Cursor */
-        #cursor {
-            width: 20px;
-            height: 20px;
-            background: var(--brand-blue);
-            border-radius: 50%;
-            position: fixed;
-            pointer-events: none;
-            z-index: 9999;
-            box-shadow: 0 0 20px var(--brand-blue), 0 0 40px var(--brand-blue);
-            mix-blend-mode: screen;
-            transition: transform 0.1s ease;
-        }
-
-        /* Animations */
-        .fade-in {
-            animation: fadeInUp 1s ease forwards;
-            opacity: 0;
-        }
-
-        @keyframes fadeInUp {
-            from { opacity: 0; transform: translateY(30px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-
-        .neon-text {
-            text-shadow: 0 0 10px rgba(24, 124, 244, 0.5);
-        }
+        /* Lightbox Overlay */
+        #lightbox { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.9); z-index: 10000; display: none; align-items: center; justify-content: center; backdrop-filter: blur(10px); }
+        #lightbox img { max-width: 90%; max-height: 80%; border-radius: 10px; box-shadow: 0 0 50px rgba(24, 124, 244, 0.4); transform: scale(0.8); transition: 0.4s; }
     </style>
 </head>
 <body>
@@ -97,86 +42,122 @@
     <div id="cursor"></div>
     <div class="noise-bg"></div>
     <div class="glow-sphere" style="top: -10%; left: -10%;"></div>
-    <div class="glow-sphere" style="bottom: -10%; right: -10%; background: radial-gradient(circle, rgba(24, 124, 244, 0.1) 0%, rgba(0,0,0,0) 70%);"></div>
+    <div id="lightbox" onclick="closeLightbox()"><img id="lightbox-img" src=""></div>
 
-    <nav class="flex justify-between items-center px-10 py-8 max-w-7xl mx-auto relative z-10 fade-in">
-        <div class="text-xl font-extrabold tracking-tighter">JUDAH<span class="text-[#187cf4]">.</span></div>
-        <div class="hidden md:flex space-x-10 text-[11px] uppercase tracking-[0.2em] font-bold text-gray-400">
-            <a href="#" class="hover:text-white transition">Home</a>
-            <a href="#work" class="hover:text-white transition">Work</a>
-            <a href="https://discord.gg/judah" class="hover:text-white transition">Discord</a>
+    <nav class="flex justify-between items-center px-10 py-8 max-w-7xl mx-auto relative z-10">
+        <div class="text-2xl font-extrabold tracking-tighter">JUDAH<span class="text-[#187cf4]">.</span></div>
+        <div class="hidden md:flex space-x-10 text-[11px] uppercase tracking-[0.3em] font-bold text-gray-400">
+            <a href="javascript:void(0)" onclick="showPage('home')" class="hover:text-white transition cursor-pointer">Home</a>
+            <a href="javascript:void(0)" onclick="showPage('work')" class="hover:text-white transition cursor-pointer">Work</a>
+            <a href="https://discord.gg/judah" target="_blank" class="hover:text-white transition">Discord</a>
         </div>
         <a href="mailto:contact@jcustoms.org" class="glass-card px-6 py-2 rounded-full text-xs font-bold uppercase tracking-widest hover:bg-[#187cf4] hover:text-white transition-all">Contact</a>
     </nav>
 
-    <section class="relative z-10 flex flex-col items-center justify-center text-center pt-32 pb-20 px-4">
-        <div class="fade-in" style="animation-delay: 0.2s">
-            <h2 class="text-[#187cf4] text-xs font-bold tracking-[0.4em] uppercase mb-4 neon-text">Judah's Customs</h2>
+    <main id="home-page" class="active-page">
+        <section class="relative z-10 flex flex-col items-center justify-center text-center pt-24 pb-20 px-4">
             <h1 class="text-6xl md:text-8xl font-extrabold mb-8 tracking-tighter leading-tight">
                 Bringing your <br> <span class="text-transparent bg-clip-text bg-gradient-to-r from-blue-400 to-blue-600">vision</span> to life.
             </h1>
-            <p class="text-gray-400 max-w-xl mx-auto text-lg mb-12 font-light">
-                Premium digital assets and custom development with a focus on high-performance aesthetics.
-            </p>
             <div class="flex flex-wrap justify-center gap-6">
-                <a href="https://discord.gg/judah" class="bg-[#187cf4] shadow-[0_0_30px_rgba(24,124,244,0.4)] px-10 py-4 rounded-full font-bold text-sm uppercase tracking-widest hover:scale-105 transition-transform">
+                <a href="https://discord.gg/judah" target="_blank" class="bg-[#187cf4] shadow-[0_0_30px_rgba(24,124,244,0.4)] px-10 py-4 rounded-full font-bold text-sm uppercase tracking-widest hover:scale-105 transition-transform">
                     Join Discord
                 </a>
-                <a href="#work" class="glass-card px-10 py-4 rounded-full font-bold text-sm uppercase tracking-widest hover:bg-white/5">
-                    View Project
+                <a href="javascript:void(0)" onclick="showPage('work')" class="glass-card px-10 py-4 rounded-full font-bold text-sm uppercase tracking-widest">
+                    Explore Assets
                 </a>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <section id="work" class="max-w-7xl mx-auto px-10 py-32 grid md:grid-cols-3 gap-8 relative z-10">
-        <div class="glass-card p-10 rounded-[32px] fade-in" data-tilt data-tilt-max="10" data-tilt-speed="400" data-tilt-glare data-tilt-max-glare="0.1" style="animation-delay: 0.4s">
-            <div class="mb-8 text-[#187cf4] text-3xl"><i class="fas fa-layer-group"></i></div>
-            <h3 class="text-2xl font-bold mb-4">UI/UX Design</h3>
-            <p class="text-gray-500 text-sm leading-relaxed">Modern interfaces designed to convert and impress. Every pixel serves a purpose.</p>
-        </div>
+        <section class="max-w-7xl mx-auto px-10 py-20 grid md:grid-cols-3 gap-6 relative z-10">
+            <div class="glass-card p-8 rounded-[2rem]" data-tilt>
+                <i class="fas fa-pen-nib text-[#187cf4] text-3xl mb-6"></i>
+                <h3 class="text-xl font-bold mb-3">Graphics</h3>
+                <p class="text-gray-500 text-sm">High-quality graphics tailored to your design needs. From server banners to profile branding, we craft visuals that command attention and define your identity.</p>
+            </div>
+            <div class="glass-card p-8 rounded-[2rem]" data-tilt>
+                <i class="fas fa-tshirt text-[#187cf4] text-3xl mb-6"></i>
+                <h3 class="text-xl font-bold mb-3">Clothing</h3>
+                <p class="text-gray-500 text-sm">Roblox clothing that comes in premium quality and fits your needs perfectly. Detailed textures and modern fits designed for the discerning avatar.</p>
+            </div>
+            <div class="glass-card p-8 rounded-[2rem]" data-tilt>
+                <i class="fas fa-car text-[#187cf4] text-3xl mb-6"></i>
+                <h3 class="text-xl font-bold mb-3">Liveries</h3>
+                <p class="text-gray-500 text-sm">High quality ER:LC liveries that fit the standard of your server. Sharp lines and realistic department designs for maximum roleplay immersion.</p>
+            </div>
+            <div class="glass-card p-8 rounded-[2rem]" data-tilt>
+                <i class="fas fa-camera text-[#187cf4] text-3xl mb-6"></i>
+                <h3 class="text-xl font-bold mb-3">Photography</h3>
+                <p class="text-gray-500 text-sm">Capturing the immersive roleplay experience within your ER:LC server. Cinematic shots that showcase your community's best moments in high definition.</p>
+            </div>
+            <div class="glass-card p-8 rounded-[2rem]" data-tilt>
+                <i class="fab fa-discord text-[#187cf4] text-3xl mb-6"></i>
+                <h3 class="text-xl font-bold mb-3">Discord</h3>
+                <p class="text-gray-500 text-sm">Advanced Discord automation and setup that makes management effortless. Custom bots and structures designed to scale with your community.</p>
+            </div>
+        </section>
+    </main>
 
-        <div class="glass-card p-10 rounded-[32px] fade-in" data-tilt data-tilt-max="10" data-tilt-speed="400" data-tilt-glare data-tilt-max-glare="0.1" style="animation-delay: 0.6s">
-            <div class="mb-8 text-[#187cf4] text-3xl"><i class="fas fa-code"></i></div>
-            <h3 class="text-2xl font-bold mb-4">Custom Dev</h3>
-            <p class="text-gray-500 text-sm leading-relaxed">Clean, efficient codebases built for speed and long-term reliability.</p>
-        </div>
-
-        <div class="glass-card p-10 rounded-[32px] fade-in" data-tilt data-tilt-max="10" data-tilt-speed="400" data-tilt-glare data-tilt-max-glare="0.1" style="animation-delay: 0.8s">
-            <div class="mb-8 text-[#187cf4] text-3xl"><i class="fas fa-microchip"></i></div>
-            <h3 class="text-2xl font-bold mb-4">Asset Creation</h3>
-            <p class="text-gray-500 text-sm leading-relaxed">Unique 3D and 2D assets tailored to your specific community or brand.</p>
-        </div>
-    </section>
-
-    <footer class="text-center py-20 relative z-10 border-t border-white/5">
-        <p class="text-gray-600 text-[10px] uppercase tracking-[0.5em]">&copy; 2026 Judah's Customs | contact@jcustoms.org</p>
-    </footer>
+    <main id="work-page" class="hidden-page">
+        <section class="max-w-7xl mx-auto px-10 py-10">
+            <h2 class="text-4xl font-black mb-12 tracking-tight">Showcase<span class="text-[#187cf4]">.</span></h2>
+            <div class="grid md:grid-cols-2 gap-10">
+                <img src="https://media.discordapp.net/attachments/1461546579159945321/1462135543390277643/image.png?format=webp" class="work-img" data-tilt onclick="openLightbox(this.src)">
+                <img src="https://media.discordapp.net/attachments/1461546579159945321/1465610895072694365/image.png?format=webp" class="work-img" data-tilt onclick="openLightbox(this.src)">
+                <img src="https://media.discordapp.net/attachments/1302425103006564467/1468763501144051732/ERLC_OA_Banners.png?format=webp" class="work-img" data-tilt onclick="openLightbox(this.src)">
+                <img src="https://media.discordapp.net/attachments/1302425103006564467/1468764172929208391/v3.png?format=webp" class="work-img" data-tilt onclick="openLightbox(this.src)">
+            </div>
+            <div class="text-center mt-20">
+                <button onclick="showPage('home')" class="glass-card px-8 py-3 rounded-full text-sm font-bold uppercase tracking-widest">Back Home</button>
+            </div>
+        </section>
+    </main>
 
     <script>
-        // Custom Cursor Logic
+        // Cursor Logic
         const cursor = document.getElementById('cursor');
-        document.addEventListener('mousemove', (e) => {
+        document.addEventListener('mousemove', e => {
             cursor.style.left = e.clientX + 'px';
             cursor.style.top = e.clientY + 'px';
         });
 
-        // Hover Effect for Cursor
-        const links = document.querySelectorAll('a, .glass-card');
-        links.forEach(link => {
-            link.addEventListener('mouseenter', () => {
-                cursor.style.transform = 'scale(3)';
-                cursor.style.background = 'white';
-            });
-            link.addEventListener('mouseleave', () => {
-                cursor.style.transform = 'scale(1)';
-                cursor.style.background = '#187cf4';
-            });
+        document.querySelectorAll('a, button, .glass-card, .work-img').forEach(el => {
+            el.addEventListener('mouseenter', () => { cursor.style.transform = 'scale(3)'; cursor.style.background = 'white'; });
+            el.addEventListener('mouseleave', () => { cursor.style.transform = 'scale(1)'; cursor.style.background = '#187cf4'; });
         });
 
-        // Init Tilt
-        VanillaTilt.init(document.querySelectorAll(".glass-card"), {
-            max: 15,
+        // Page Swapping
+        function showPage(pageId) {
+            window.scrollTo(0, 0);
+            document.getElementById('home-page').classList.remove('active-page');
+            document.getElementById('home-page').classList.add('hidden-page');
+            document.getElementById('work-page').classList.remove('active-page');
+            document.getElementById('work-page').classList.add('hidden-page');
+
+            const active = document.getElementById(pageId + '-page');
+            active.classList.remove('hidden-page');
+            active.classList.add('active-page');
+        }
+
+        // Lightbox Logic
+        function openLightbox(src) {
+            const lb = document.getElementById('lightbox');
+            const img = document.getElementById('lightbox-img');
+            img.src = src;
+            lb.style.display = 'flex';
+            setTimeout(() => { img.style.transform = 'scale(1)'; }, 10);
+        }
+
+        function closeLightbox() {
+            const lb = document.getElementById('lightbox');
+            const img = document.getElementById('lightbox-img');
+            img.style.transform = 'scale(0.8)';
+            setTimeout(() => { lb.style.display = 'none'; }, 300);
+        }
+
+        // Initialize Tilt
+        VanillaTilt.init(document.querySelectorAll("[data-tilt]"), {
+            max: 10,
             speed: 400,
             glare: true,
             "max-glare": 0.2,
